--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nahid180.github.io/articlesaboutcoding",
+  "homepage": "https://nahid180.github.io/themuslimcoder",
   "name": "blog-frontend",
   "version": "1.0.0",
   "private": true,
