--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "axios": "^0.27.2",
     "babel-plugin-prismjs": "^2.1.0",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "mdx-utils": "^0.2.0",
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.2.0",
-    "react-embed-gist": "^1.0.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
